--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
           - 3306:3306
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: todo
-          MYSQL_USER: todo
-          MYSQL_PASSWORD: todo
+          MYSQL_DATABASE: planner
+          MYSQL_USER: planner
+          MYSQL_PASSWORD: planner
       redis:
         image: redis
         options: >-
@@ -38,7 +38,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         go install github.com/k0kubun/sqldef/cmd/mysqldef@latest
-        mysqldef -u todo -p todo -h 127.0.0.1 -P 3306 todo < ./_tools/mysql/schema.sql
+        mysqldef -u planner -p planner -h 127.0.0.1 -P 3306 planner < ./_tools/mysql/schema.sql
     - run: go test ./... -coverprofile=coverage.out
     - name: report coverage
       uses: k1LoW/octocov-action@v0
